Fix explorer alignments of list actions when scrollbar visibility is different

--- a/client/src/features/Bills/BillDocumentExplorer.css
+++ b/client/src/features/Bills/BillDocumentExplorer.css
@@ -45,7 +45,11 @@
 
     .explorer-list {
         height: 100%;
-        overflow-y: auto;
+        overflow-y: hidden;
+
+        &.bill-documents {
+            overflow-y: scroll;
+        }
     }
     
     .list-item {
